--- a/config.h.in
+++ b/config.h.in
@@ -25,8 +25,7 @@
 #define CHTTPD_VERSION "@PROJECT_VERSION@"
 
 
-#cmakedefine USE_SELECT @USE_SELECT@
-#cmakedefine USE_EPOLL @USE_EPOLL@
+#cmakedefine CHTTPD_IOMONITORING @CHTTPD_IOMONITORING@
 
 
 #endif  // CONFIG_H_IN_
